# citra

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  .lgtm.yml  .travis-build-docker.sh  .travis-build.sh  .travis-deps.sh  .travis-upload.sh  .travis.descriptor.json.in  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  TODO  akiru.sln  appveyor.yml  bitrise.yml  citra.sln  citrus.sln  keys.tar.enc  license.txt  save0.citrasave  upload_to_mega.js
src/: .clang-format  CMakeLists.txt
src/akiru/: CMakeLists.txt  akiru.rc  akiru.vcxproj  akiru.vcxproj.filters  resource.h
src/akiru/src/: akiru.cpp  akiru.h  version.h
src/android/: .gitignore  build.gradle  build.gradle.kts  code-style-java.xml  gradle.properties  settings.gradle.kts
src/android/app/: CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
src/audio_core/: CMakeLists.txt  audio_core.cpp  audio_core.h  audio_types.h  codec.cpp  codec.h  cubeb_input.cpp  cubeb_input.h  cubeb_sink.cpp  cubeb_sink.h  dsp_interface.cpp  dsp_interface.h  input.h  input_details.cpp  input_details.h  interpolate.cpp  interpolate.h  null_input.h  null_sink.h  openal_input.cpp  openal_input.h  openal_sink.cpp  openal_sink.h  sdl2_sink.cpp  sdl2_sink.h  sink.h  sink_details.cpp  sink_details.h  static_input.cpp  static_input.h  time_stretch.cpp  time_stretch.h
src/audio_core/hle/: aac_decoder.cpp  aac_decoder.h  adts.h  adts_reader.c  adts_reader.cpp  audiotoolbox_decoder.cpp  audiotoolbox_decoder.h  common.h  decoder.cpp  decoder.h  dsp.cpp  dsp.h  faad2_decoder.cpp  faad2_decoder.h  fdk_decoder.cpp  fdk_decoder.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_dl.cpp  ffmpeg_dl.h  filter.cpp  filter.h  hle.cpp  hle.h  mediandk_decoder.cpp  mediandk_decoder.h  mixers.cpp  mixers.h  pipe.cpp  pipe.h  shared_memory.h  source.cpp  source.h  wmf_decoder.cpp  wmf_decoder.h  wmf_decoder_utils.cpp  wmf_decoder_utils.h
src/audio_core/lle/: lle.cpp  lle.h
src/citra/: CMakeLists.txt  citra.cpp  citra.h  citra.rc  citra.vcxproj  citra.vcxproj.filters  config.cpp  config.h  default_ini.h  generic_image_interface.cpp  generic_image_interface.h  lodepng_image_interface.cpp  lodepng_image_interface.h  resource.h
src/citra/emu_window/: emu_window_glfw.cpp  emu_window_glfw.h  emu_window_sdl2.cpp  emu_window_sdl2.h  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_sw.cpp  (+3 more)
src/citra_qt/: CMakeLists.txt  Info.plist  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bootmanager.cpp  bootmanager.h  bootmanager.hxx  callstack.hxx  cheats.cpp  cheats.h  cheats.ui  citra-qt.rc  citra_qt.vcxproj  citra_qt.vcxproj.filters  compatdb.cpp  compatdb.h  compatdb.ui  compatibility_list.cpp  compatibility_list.h  config.cpp  config.h  configure.ui  configure_audio.cpp  configure_audio.h  configure_audio.ui  configure_debug.cpp  configure_debug.h  configure_debug.ui  configure_dialog.cpp  configure_dialog.h  configure_general.cpp  configure_general.h  configure_general.ui  configure_graphics.cpp  configure_graphics.h  configure_graphics.ui  configure_input.cpp  configure_input.h  configure_input.ui  (+50 more)
src/citrus/: CMakeLists.txt  citrus.vcxproj  citrus.vcxproj.filters
src/common/: CMakeLists.txt  abi.cpp  abi.h  alignment.h  android_storage.cpp  android_storage.h  announce_multiplayer_room.h  apple_authorization.cpp  apple_authorization.h  arch.h  archives.h  assert.h  atomic.h  atomic_gcc.h  atomic_ops.h  atomic_win32.h  bit_field.h  bit_set.h  bounded_threadsafe_queue.h  break_points.cpp  break_points.h  chunk_file.h  cityhash.cpp  cityhash.h  code_block.h  color.h  common.h  common.vcxproj  common.vcxproj.filters  common_funcs.h  common_paths.h  common_precompiled_headers.h  common_types.h  concurrent_ring_buffer.h  console_listener.cpp  console_listener.h  construct.h  cpu_detect.cpp  cpu_detect.h  cpu_detect_generic.cpp  (+99 more)
src/core/: 3ds.h  CMakeLists.txt  announce_multiplayer_session.cpp  announce_multiplayer_session.h  core.cpp  core.h  core.vcxproj  core.vcxproj.filters  core_timing.cpp  core_timing.h  custom_tex_cache.cpp  custom_tex_cache.h  global.h  hle.cpp  loader.cpp  loader.h  mem_map.cpp  mem_map.h  mem_map_funcs.cpp  memory.cpp  memory.h  memory_setup.h  mmio.h  movie.cpp  movie.h  nus_download.cpp  nus_download.h  perf_stats.cpp  perf_stats.h  savestate.cpp  savestate.h  savestate_data.h  settings.cpp  settings.h  system.cpp  system.h  system_titles.cpp  system_titles.h  telemetry_session.cpp  telemetry_session.h
src/dedicated_room/: CMakeLists.txt  citra-room.cpp  citra-room.rc
src/input_common/: CMakeLists.txt  analog_from_button.cpp  analog_from_button.h  keyboard.cpp  keyboard.h  main.cpp  main.h  motion_emu.cpp  motion_emu.h  touch_from_button.cpp  touch_from_button.h
src/network/: CMakeLists.txt  announce_multiplayer_session.cpp  announce_multiplayer_session.h  network.cpp  network.h  network_settings.cpp  network_settings.h  packet.cpp  packet.h  room.cpp  room.h  room_member.cpp  room_member.h  socket_manager.cpp  socket_manager.h  verify_user.cpp  verify_user.h
src/tests/: CMakeLists.txt  glad.cpp  tests.cpp
src/video_core/: CMakeLists.txt  clipper.cpp  clipper.h  color.h  command_processor.cpp  command_processor.h  generate_shaders.cmake  geometry_pipeline.cpp  geometry_pipeline.h  gpu.cpp  gpu.h  gpu_debugger.h  hwrasterizer_base.h  math.h  pica.cpp  pica.h  pica_state.h  pica_types.h  primitive_assembly.cpp  primitive_assembly.h  rasterizer.cpp  rasterizer.h  rasterizer_accelerated.cpp  rasterizer_accelerated.h  rasterizer_interface.h  regs.cpp  regs.h  regs_framebuffer.h  regs_lighting.h  regs_pipeline.h  regs_rasterizer.h  regs_shader.h  regs_texturing.h  renderer_base.cpp  renderer_base.h  shader_interpreter.cpp  shader_interpreter.h  swrasterizer.cpp  swrasterizer.h  utils.cpp  (+9 more)
src/web_service/: CMakeLists.txt  announce_room_json.cpp  announce_room_json.h  json.h  nus_download.cpp  nus_download.h  nus_titles.h  telemetry_json.cpp  telemetry_json.h  verify_login.cpp  verify_login.h  verify_user_jwt.cpp  verify_user_jwt.h  web_backend.cpp  web_backend.h
(+1999 files in other folders)
